<resources>
    <string name="app_name">ChangeMedia</string>
    <string name="change_media_text">Change media</string>
</resources>
