<resources>
    <string name="app_name">Providers</string>
    <string name="play_text">Play</string>
    <string name="pause_text">Pause</string>
</resources>
